# game-engine

./: Cargo.toml  README.md  ci.sh
apis/pipewire/: Cargo.toml
apis/pipewire/src/: lib.rs
apis/soundio/: Cargo.toml
apis/soundio/src/: lib.rs
apis/vk/: Cargo.toml
apis/vk/src/: lib.rs  tests.rs
apis/wayland/: Cargo.toml
apis/wayland/src/: lib.rs  protocols.rs
apis/xkbcommon/: Cargo.toml
apis/xkbcommon/src/: lib.rs
apis/xr/: Cargo.toml
apis/xr/src/: lib.rs
apps/basic/: Cargo.toml
apps/basic/res/shader/: sdf_gen.comp.spv  sdf_trace.comp.spv  sdf_upd.comp.spv  ui_colored.frag.spv  ui_colored.vert.spv  ui_colored_gradient.vert.spv  ui_curves.frag.spv  ui_curves.vert.spv  ui_curves_gradient.vert.spv  ui_dyn_colored.vert.spv  ui_dyn_colored_gradient.vert.spv  ui_dyn_textured.vert.spv  ui_dyn_textured_gradient.vert.spv  ui_glyphs.geom.spv  ui_glyphs.vert.spv  ui_sdf.frag.spv  ui_sdf_gen.comp.spv  ui_textured.frag.spv  ui_textured.vert.spv  ui_textured_gradient.vert.spv
apps/basic/src/: main.rs
apps/basic/tmp/: default.cap  log  pipeline_cache  tmp
codegen/khrgen/: Cargo.toml
codegen/khrgen/src/: gen.rs  lib.rs  main.rs  parse.rs  xml.rs
codegen/wlgen/: Cargo.toml
codegen/wlgen/res/: presentation-time.xml  wayland.xml
codegen/wlgen/res/other/: example.c  out.c  out2.c  win32_wsi.rs
codegen/wlgen/src/: main.rs  xml.rs
components/app/: Cargo.toml
components/app/src/: asset.rs  builder.rs  executor.rs  lib.rs  logger.rs  plugin.rs  registry.rs
components/atomic-sync/: Cargo.toml
components/atomic-sync/src/: concurrent_linked_list.rs  concurrent_tree.rs  condvar.rs  lib.rs  mpbc.rs  mpbc_v2.rs  mpmc.rs
components/ecs/: Cargo.toml
components/ecs/ecs_bench_suite/: Cargo.toml
components/ecs/ecs_bench_suite/benches/: benchmarks.rs
components/ecs/ecs_bench_suite/src/: lib.rs
components/ecs/ecs_bench_suite/src/tecs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  simple_insert.rs  simple_iter.rs
components/ecs/src/: alloc.rs  archetype.rs  component.rs  entry.rs  lib.rs  query.rs  resources.rs  schedule.rs  system.rs  utils.rs  world.rs
components/file-formats/: Cargo.toml
components/file-formats/src/: ber.rs  dyn_repr.rs  ebml.rs  elf.rs  flac.rs  gltf.rs  json.rs  ktx2.rs  lib.rs  mkv.rs  opus.rs  protobuf.rs  svg.rs  toml.rs  utils.rs  xml.rs  yaml.rs
components/math/: Cargo.toml
components/math/src/: lib.rs
components/render-manager/: Cargo.toml
components/render-manager/src/: cfg.rs  cmd.rs  device.rs  lib.rs  mem.rs  misc.rs  plugins.rs  render_graph.rs  scene.rs  target.rs  utils.rs
components/scene/: Cargo.toml
components/scene/src/: animation.rs  audio.rs  glyphs.rs  lib.rs  mesh.rs  path.rs  texture.rs  transform.rs  ui.rs
components/vec-map/: Cargo.toml
components/vec-map/src/: lib.rs
plugins/glsl/: compile.sh  sdf_gen.comp.glsl  sdf_trace.comp.glsl  sdf_upd.comp.glsl  ui.glsl  ui_dyn.comp.glsl  ui_glyphs.glsl  ui_sdf_gen.comp.glsl
plugins/sdft/: Cargo.toml
plugins/sdft/host/: Cargo.toml
plugins/sdft/host/src/: main.rs
plugins/sdft/shaders/: Cargo.toml
plugins/sdft/shaders/.cargo/: config
plugins/sdft/shaders/src/: lib.rs
plugins/sdft/src/: device.rs  lib.rs  scene.rs  target.rs
plugins/ui/: Cargo.toml
plugins/ui/shaders/: Cargo.toml
plugins/ui/shaders/src/: dyn.rs  lib.rs  sdf2d.rs
plugins/ui/src/: device.rs  lib.rs  loader.rs  scene.rs  scene_components.rs  target.rs
rustc/: build_librustc_codegen_spirv.sh
