[package]
name        = "vk"
version     = "0.1.0"
authors     = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition     = "2021"
repository  = ""
license     = "MIT"
description = "Bindings for the vulkan library"

[dependencies]
log        = "^0.4"
libloading = "0.*"

[features]
default = ["VK_VERSION_1_0", "VK_VERSION_1_1", ]
RESERVED_DO_NOT_USE_146                           = []
RESERVED_DO_NOT_USE_94                            = []
VK_AMD_buffer_marker                              = []
VK_AMD_device_coherent_memory                     = []
VK_AMD_display_native_hdr                         = ["VK_KHR_get_physical_device_properties2", "VK_KHR_get_surface_capabilities2", "VK_KHR_swapchain"]
VK_AMD_draw_indirect_count                        = []
VK_AMD_extension_134                              = []
VK_AMD_extension_135                              = []
VK_AMD_extension_136                              = []
VK_AMD_extension_140                              = []
VK_AMD_extension_142                              = []
VK_AMD_extension_143                              = []
VK_AMD_extension_17                               = []
VK_AMD_extension_18                               = []
VK_AMD_extension_183                              = []
VK_AMD_extension_187                              = []
VK_AMD_extension_188                              = []
VK_AMD_extension_189                              = []
VK_AMD_extension_20                               = []
VK_AMD_extension_227                              = []
VK_AMD_extension_229                              = []
VK_AMD_extension_231                              = []
VK_AMD_extension_232                              = []
VK_AMD_extension_233                              = []
VK_AMD_extension_234                              = []
VK_AMD_extension_235                              = []
VK_AMD_extension_236                              = []
VK_AMD_extension_24                               = []
VK_AMD_extension_25                               = []
VK_AMD_extension_32                               = []
VK_AMD_extension_33                               = []
VK_AMD_extension_35                               = []
VK_AMD_extension_39                               = []
VK_AMD_extension_40                               = []
VK_AMD_extension_41                               = []
VK_AMD_extension_44                               = []
VK_AMD_extension_45                               = []
VK_AMD_extension_46                               = []
VK_AMD_gcn_shader                                 = []
VK_AMD_gpu_shader_half_float                      = []
VK_AMD_gpu_shader_int16                           = []
VK_AMD_memory_overallocation_behavior             = []
VK_AMD_mixed_attachment_samples                   = []
VK_AMD_negative_viewport_height                   = []
VK_AMD_pipeline_compiler_control                  = []
VK_AMD_rasterization_order                        = []
VK_AMD_shader_ballot                              = []
VK_AMD_shader_core_properties                     = ["VK_KHR_get_physical_device_properties2"]
VK_AMD_shader_core_properties2                    = ["VK_AMD_shader_core_properties"]
VK_AMD_shader_explicit_vertex_parameter           = []
VK_AMD_shader_fragment_mask                       = []
VK_AMD_shader_image_load_store_lod                = []
VK_AMD_shader_info                                = []
VK_AMD_shader_trinary_minmax                      = []
VK_AMD_texture_gather_bias_lod                    = ["VK_KHR_get_physical_device_properties2"]
VK_ANDROID_external_memory_android_hardware_buffer= ["VK_KHR_sampler_ycbcr_conversion", "VK_KHR_external_memory", "VK_EXT_queue_family_foreign"]
VK_ANDROID_native_buffer                          = []
VK_ARM_extension_281                              = []
VK_BRCM_extension_264                             = []
VK_BRCM_extension_265                             = []
VK_EXT_acquire_xlib_display                       = ["VK_EXT_direct_mode_display"]
VK_EXT_astc_decode_mode                           = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_blend_operation_advanced                   = []
VK_EXT_buffer_device_address                      = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_calibrated_timestamps                      = []
VK_EXT_conditional_rendering                      = []
VK_EXT_conservative_rasterization                 = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_debug_marker                               = ["VK_EXT_debug_report"]
VK_EXT_debug_report                               = []
VK_EXT_debug_utils                                = []
VK_EXT_depth_clip_enable                          = []
VK_EXT_depth_range_unrestricted                   = []
VK_EXT_descriptor_indexing                        = ["VK_KHR_get_physical_device_properties2", "VK_KHR_maintenance3"]
VK_EXT_direct_mode_display                        = ["VK_KHR_display"]
VK_EXT_discard_rectangles                         = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_display_control                            = ["VK_EXT_display_surface_counter", "VK_KHR_swapchain"]
VK_EXT_display_surface_counter                    = ["VK_KHR_display"]
VK_EXT_extension_160                              = []
VK_EXT_extension_177                              = []
VK_EXT_extension_220                              = []
VK_EXT_extension_223                              = []
VK_EXT_extension_255                              = []
VK_EXT_extension_259                              = []
VK_EXT_extension_267                              = []
VK_EXT_extension_28                               = []
VK_EXT_extension_284                              = []
VK_EXT_extension_285                              = []
VK_EXT_extension_286                              = []
VK_EXT_extension_289                              = []
VK_EXT_extension_298                              = []
VK_EXT_external_memory_dma_buf                    = ["VK_KHR_external_memory_fd"]
VK_EXT_external_memory_host                       = ["VK_KHR_external_memory"]
VK_EXT_filter_cubic                               = ["VK_IMG_filter_cubic"]
VK_EXT_fragment_density_map                       = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_fragment_shader_interlock                  = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_full_screen_exclusive                      = ["VK_KHR_get_physical_device_properties2", "VK_KHR_surface", "VK_KHR_get_surface_capabilities2", "VK_KHR_swapchain"]
VK_EXT_global_priority                            = []
VK_EXT_hdr_metadata                               = ["VK_KHR_swapchain"]
VK_EXT_headless_surface                           = ["VK_KHR_surface"]
VK_EXT_host_query_reset                           = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_image_drm_format_modifier                  = ["VK_KHR_bind_memory2", "VK_KHR_get_physical_device_properties2", "VK_KHR_image_format_list", "VK_KHR_sampler_ycbcr_conversion"]
VK_EXT_index_type_uint8                           = []
VK_EXT_inline_uniform_block                       = ["VK_KHR_get_physical_device_properties2", "VK_KHR_maintenance1"]
VK_EXT_line_rasterization                         = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_memory_budget                              = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_memory_priority                            = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_metal_surface                              = ["VK_KHR_surface"]
VK_EXT_pci_bus_info                               = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_pipeline_creation_feedback                 = []
VK_EXT_post_depth_coverage                        = []
VK_EXT_queue_family_foreign                       = ["VK_KHR_external_memory"]
VK_EXT_sample_locations                           = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_sampler_filter_minmax                      = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_scalar_block_layout                        = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_separate_stencil_usage                     = []
VK_EXT_shader_demote_to_helper_invocation         = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_shader_stencil_export                      = []
VK_EXT_shader_subgroup_ballot                     = []
VK_EXT_shader_subgroup_vote                       = []
VK_EXT_shader_viewport_index_layer                = []
VK_EXT_subgroup_size_control                      = []
VK_EXT_swapchain_colorspace                       = ["VK_KHR_surface"]
VK_EXT_texel_buffer_alignment                     = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_texture_compression_astc_hdr               = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_tooling_info                               = []
VK_EXT_transform_feedback                         = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_validation_cache                           = []
VK_EXT_validation_features                        = []
VK_EXT_validation_flags                           = []
VK_EXT_vertex_attribute_divisor                   = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_ycbcr_image_arrays                         = ["VK_KHR_sampler_ycbcr_conversion"]
VK_FUCHSIA_imagepipe_surface                      = ["VK_KHR_surface"]
VK_GGP_extension_263                              = []
VK_GGP_frame_token                                = ["VK_KHR_swapchain", "VK_GGP_stream_descriptor_surface"]
VK_GGP_stream_descriptor_surface                  = ["VK_KHR_surface"]
VK_GOOGLE_decorate_string                         = []
VK_GOOGLE_display_timing                          = ["VK_KHR_swapchain"]
VK_GOOGLE_extension_194                           = []
VK_GOOGLE_extension_195                           = []
VK_GOOGLE_extension_196                           = []
VK_GOOGLE_extension_216                           = []
VK_GOOGLE_extension_217                           = []
VK_GOOGLE_extension_49                            = []
VK_GOOGLE_hlsl_functionality1                     = []
VK_GOOGLE_user_type                               = []
VK_IMG_extension_107                              = []
VK_IMG_extension_108                              = []
VK_IMG_extension_111                              = []
VK_IMG_extension_69                               = []
VK_IMG_filter_cubic                               = []
VK_IMG_format_pvrtc                               = []
VK_INTEL_extension_243                            = []
VK_INTEL_extension_271                            = []
VK_INTEL_extension_272                            = []
VK_INTEL_extension_273                            = []
VK_INTEL_extension_274                            = []
VK_INTEL_performance_query                        = []
VK_INTEL_shader_integer_functions2                = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_16bit_storage                              = ["VK_KHR_get_physical_device_properties2", "VK_KHR_storage_buffer_storage_class"]
VK_KHR_8bit_storage                               = ["VK_KHR_get_physical_device_properties2", "VK_KHR_storage_buffer_storage_class"]
VK_KHR_android_surface                            = ["VK_KHR_surface"]
VK_KHR_bind_memory2                               = []
VK_KHR_buffer_device_address                      = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_create_renderpass2                         = ["VK_KHR_multiview", "VK_KHR_maintenance2"]
VK_KHR_dedicated_allocation                       = ["VK_KHR_get_memory_requirements2"]
VK_KHR_depth_stencil_resolve                      = ["VK_KHR_create_renderpass2"]
VK_KHR_descriptor_update_template                 = []
VK_KHR_device_group                               = ["VK_KHR_device_group_creation"]
VK_KHR_device_group_creation                      = []
VK_KHR_display                                    = ["VK_KHR_surface"]
VK_KHR_display_swapchain                          = ["VK_KHR_swapchain", "VK_KHR_display"]
VK_KHR_draw_indirect_count                        = []
VK_KHR_driver_properties                          = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_extension_119                              = []
VK_KHR_extension_209                              = []
VK_KHR_extension_221                              = []
VK_KHR_extension_249                              = []
VK_KHR_extension_268                              = []
VK_KHR_extension_269                              = []
VK_KHR_extension_275                              = []
VK_KHR_extension_276                              = []
VK_KHR_extension_280                              = []
VK_KHR_extension_294                              = []
VK_KHR_extension_295                              = []
VK_KHR_extension_297                              = []
VK_KHR_extension_299                              = []
VK_KHR_extension_300                              = []
VK_KHR_external_fence                             = ["VK_KHR_external_fence_capabilities"]
VK_KHR_external_fence_capabilities                = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_fence_fd                          = ["VK_KHR_external_fence"]
VK_KHR_external_fence_win32                       = ["VK_KHR_external_fence"]
VK_KHR_external_memory                            = ["VK_KHR_external_memory_capabilities"]
VK_KHR_external_memory_capabilities               = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_memory_fd                         = ["VK_KHR_external_memory"]
VK_KHR_external_memory_win32                      = ["VK_KHR_external_memory"]
VK_KHR_external_semaphore                         = ["VK_KHR_external_semaphore_capabilities"]
VK_KHR_external_semaphore_capabilities            = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_semaphore_fd                      = ["VK_KHR_external_semaphore"]
VK_KHR_external_semaphore_win32                   = ["VK_KHR_external_semaphore"]
VK_KHR_get_display_properties2                    = ["VK_KHR_display"]
VK_KHR_get_memory_requirements2                   = []
VK_KHR_get_physical_device_properties2            = []
VK_KHR_get_surface_capabilities2                  = ["VK_KHR_surface"]
VK_KHR_image_format_list                          = []
VK_KHR_imageless_framebuffer                      = ["VK_KHR_maintenance2", "VK_KHR_image_format_list"]
VK_KHR_incremental_present                        = ["VK_KHR_swapchain"]
VK_KHR_maintenance1                               = []
VK_KHR_maintenance2                               = []
VK_KHR_maintenance3                               = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_mir_surface                                = ["VK_KHR_surface"]
VK_KHR_multiview                                  = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_performance_query                          = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_pipeline_executable_properties             = []
VK_KHR_push_descriptor                            = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_relaxed_block_layout                       = []
VK_KHR_sampler_mirror_clamp_to_edge               = []
VK_KHR_sampler_ycbcr_conversion                   = ["VK_KHR_maintenance1", "VK_KHR_bind_memory2", "VK_KHR_get_memory_requirements2", "VK_KHR_get_physical_device_properties2"]
VK_KHR_separate_depth_stencil_layouts             = ["VK_KHR_get_physical_device_properties2", "VK_KHR_create_renderpass2"]
VK_KHR_shader_atomic_int64                        = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_shader_clock                               = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_shader_draw_parameters                     = []
VK_KHR_shader_float16_int8                        = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_shader_float_controls                      = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_shader_subgroup_extended_types             = []
VK_KHR_shared_presentable_image                   = ["VK_KHR_swapchain", "VK_KHR_get_physical_device_properties2", "VK_KHR_get_surface_capabilities2"]
VK_KHR_spirv_1_4                                  = ["VK_KHR_shader_float_controls"]
VK_KHR_storage_buffer_storage_class               = []
VK_KHR_surface                                    = []
VK_KHR_surface_protected_capabilities             = ["VK_KHR_get_surface_capabilities2"]
VK_KHR_swapchain                                  = ["VK_KHR_surface"]
VK_KHR_swapchain_mutable_format                   = ["VK_KHR_swapchain", "VK_KHR_maintenance2", "VK_KHR_image_format_list"]
VK_KHR_timeline_semaphore                         = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_uniform_buffer_standard_layout             = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_variable_pointers                          = ["VK_KHR_get_physical_device_properties2", "VK_KHR_storage_buffer_storage_class"]
VK_KHR_vulkan_memory_model                        = []
VK_KHR_wayland_surface                            = ["VK_KHR_surface"]
VK_KHR_win32_keyed_mutex                          = ["VK_KHR_external_memory_win32"]
VK_KHR_win32_surface                              = ["VK_KHR_surface"]
VK_KHR_xcb_surface                                = ["VK_KHR_surface"]
VK_KHR_xlib_surface                               = ["VK_KHR_surface"]
VK_MESA_extension_244                             = []
VK_MVK_ios_surface                                = ["VK_KHR_surface"]
VK_MVK_macos_surface                              = ["VK_KHR_surface"]
VK_MVK_moltenvk                                   = []
VK_NN_vi_surface                                  = ["VK_KHR_surface"]
VK_NVX_device_generated_commands                  = []
VK_NVX_extension_287                              = []
VK_NVX_extension_288                              = []
VK_NVX_extension_30                               = []
VK_NVX_extension_48                               = []
VK_NVX_image_view_handle                          = []
VK_NVX_multiview_per_view_attributes              = ["VK_KHR_multiview"]
VK_NV_clip_space_w_scaling                        = []
VK_NV_compute_shader_derivatives                  = ["VK_KHR_get_physical_device_properties2"]
VK_NV_cooperative_matrix                          = ["VK_KHR_get_physical_device_properties2"]
VK_NV_corner_sampled_image                        = ["VK_KHR_get_physical_device_properties2"]
VK_NV_coverage_reduction_mode                     = ["VK_NV_framebuffer_mixed_samples"]
VK_NV_dedicated_allocation                        = []
VK_NV_dedicated_allocation_image_aliasing         = ["VK_KHR_dedicated_allocation"]
VK_NV_device_diagnostic_checkpoints               = ["VK_KHR_get_physical_device_properties2"]
VK_NV_extension_101                               = []
VK_NV_extension_104                               = []
VK_NV_extension_151                               = []
VK_NV_extension_152                               = []
VK_NV_extension_164                               = []
VK_NV_extension_168                               = []
VK_NV_extension_261                               = []
VK_NV_extension_278                               = []
VK_NV_extension_279                               = []
VK_NV_extension_291                               = []
VK_NV_extension_292                               = []
VK_NV_extension_293                               = []
VK_NV_extension_296                               = []
VK_NV_extension_301                               = []
VK_NV_extension_52                                = []
VK_NV_extension_53                                = []
VK_NV_external_memory                             = ["VK_NV_external_memory_capabilities"]
VK_NV_external_memory_capabilities                = []
VK_NV_external_memory_win32                       = ["VK_NV_external_memory"]
VK_NV_fill_rectangle                              = []
VK_NV_fragment_coverage_to_color                  = []
VK_NV_fragment_shader_barycentric                 = ["VK_KHR_get_physical_device_properties2"]
VK_NV_framebuffer_mixed_samples                   = []
VK_NV_geometry_shader_passthrough                 = []
VK_NV_glsl_shader                                 = []
VK_NV_mesh_shader                                 = ["VK_KHR_get_physical_device_properties2"]
VK_NV_ray_tracing                                 = ["VK_KHR_get_physical_device_properties2", "VK_KHR_get_memory_requirements2"]
VK_NV_representative_fragment_test                = []
VK_NV_sample_mask_override_coverage               = []
VK_NV_scissor_exclusive                           = ["VK_KHR_get_physical_device_properties2"]
VK_NV_shader_image_footprint                      = ["VK_KHR_get_physical_device_properties2"]
VK_NV_shader_sm_builtins                          = []
VK_NV_shader_subgroup_partitioned                 = []
VK_NV_shading_rate_image                          = ["VK_KHR_get_physical_device_properties2"]
VK_NV_viewport_array2                             = []
VK_NV_viewport_swizzle                            = []
VK_NV_win32_keyed_mutex                           = ["VK_NV_external_memory_win32"]
VK_QCOM_extension_172                             = []
VK_QCOM_extension_173                             = []
VK_QCOM_extension_174                             = []
VK_QCOM_extension_283                             = []
VK_VERSION_1_0                                    = []
VK_VERSION_1_1                                    = []

