[package]
name        = "wayland"
version     = "0.1.0"
authors     = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition     = "2021"
repository  = ""
license     = "MIT"
description = "Bindings for the wayland-client library"

[dependencies]
log        = "^0.4"
libloading = "^0.6"
#nix = "*"
